# tools

./: index.html
projects/cawnpiaknak/: Cargo.toml
projects/cawnpiaknak/compiler/: Cargo.toml
projects/cawnpiaknak/compiler/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  parser.rs  token.rs
projects/cawnpiaknak/compiler_wasm/: Cargo.toml
projects/cawnpiaknak/compiler_wasm/src/: lib.rs
projects/cawnpiaknak/format/: Cargo.toml
projects/cawnpiaknak/format/src/: deserialize.rs  lib.rs  opcodes.rs  serialize.rs  vm.rs
projects/cawnpiaknak/runtime/: Cargo.toml
projects/cawnpiaknak/runtime/src/: engine_context.rs  input.rs  lib.rs
projects/cawnpiaknak/tools/: Cargo.toml
projects/cawnpiaknak/web/: bootstrap.js  editor.html  editor.js  help.html  index.html
projects/chainthought/: index.html
projects/coral/: coral.html
projects/fhirpatientsearch/fpf/: Program.cs  appsettings.Development.json  appsettings.json  fpf.csproj  fpf.http  fpf.sln
projects/fhirpatientsearch/fpi/: index.html  script.js  style.css
projects/fren/: index.html  pylistscript.py  words.js
projects/geniusMusicRater/: fell.html  good-vibe.html  index.html  like_me.html  reafs.html
projects/geniusMusicRater/cprogram/: CMakeLists.txt
projects/geniusMusicRater/cprogram/include/: audio_decoder.h  feature_extractor.h  geniusgrading.h  grading.h  harmony.h  melody.h  production.h  psychoacoustics.h  rhythm.h  structure.h
projects/geniusMusicRater/cprogram/src/: audio_decoder.c  feature_extractor.c  geniusgrading.c  grading.c  harmony.c  main.c  melody.c  production.c  psychoacoustics.c  rhythm.c  structure.c
projects/gfind/: ffdataformater.html  gfind.c  gfind.py  gfind_fmtr.c  input.txt  output.json
projects/gfind/gfi/: index.html  script.js  style.css
projects/grapheditor/: index.html  script.js  style.css
projects/irc/: camera_formats.c  camera_select.c  documentation.txt  ir_capture.c  ir_capture.h  irc.html  main.c
projects/linksort/: index.html  links.txt  script.js  style.css
projects/lowlevelexplained/: index.html
projects/manomi/: index.html  rc.py  readme.txt
projects/railroad/: conf.lua  index.html  main.lua
projects/railroad/src/: app.lua  model.lua
projects/scraper/: scraper.c
projects/trafod/: client_discover.c  go.mod  main.go
projects/trafod/server/: server.go
projects/tsodna/: wasm-exe-analyzer.cabal
projects/tsodna/app/: Main.hs
scrap/: scrapdirectory.html
scrap/portfolio/: imgscrap.py  projectboxundertale.html  yanko_directoryfromthefuture.html
(+31 files in other folders)
