cabal-version:      3.0
name:               wasm-exe-analyzer
version:            0.1.0.0
license:            NONE
author:             Ray
maintainer:         NONE
copyright:          All Rights Reserved
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable wasm-exe-analyzer
    import:           warnings

    main-is:          Main.hs

    build-depends:    
        base >=4.19 && <4.23,
        aeson >=2.2 && <2.3,
        time >=1.8 && <1.16,
        bytestring,
        text,
        binary,
        containers

    ghc-options:
        -optl-mexec-model=reactor   
        -optl-Wl,--export=analyze_pe_wasm
        -optl-Wl,--export=malloc
        -optl-Wl,--export=free
        -optl-Wl,-u,hs_init         
        -optl-Wl,--export=hs_init

    hs-source-dirs:   app

    default-language: Haskell2010
