[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
format = { path = "../format" }

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "console",
    "Performance",
    "Headers",
    "Request",
    "RequestInit",
    "Response",
    "EventTarget",
    "Event",
    "KeyboardEvent",
    "MouseEvent",
    "PointerEvent",
    "DomRect",
]